# testProjectML

./: .gitignore  CMakeLists.txt  main.cpp
headers/: BaseRenderer.h  CUDAColorGrapherRenderer.h  Color.h  EmptyRenderer.h  Grapher.h  InvertedPixelSetter.h  Matrix.h  MemoryManagement.h  NeuralNetworkRenderer.h  PixelSetter.h  PixelSetterWrapper.h  PixelWindow.h  TextDrawer.h  TextEditor.h  TransformedPixelSetter.h  X11PixelSetter.h
headers/NeuralNetworks2/: CostFunction.h  Layer.h  NetworkTypes.h  NeuralNetwork.h  Neuron.h  TrainingSet.h
source/: BaseRenderer.cpp  CUDAColorGrapherRenderer.cu  Color.cpp  EmptyRenderer.cpp  Grapher.cpp  InvertedPixelSetter.cpp  Matrix.cpp  MemoryManagement.cu  NeuralNetworkRenderer.cpp  PixelSetter.cpp  PixelSetterWrapper.cpp  PixelWindow.cpp  TextDrawer.cpp  TextEditor.cpp  TransformedPixelSetter.cpp  X11PixelSetter.cpp
source/NeuralNetworks2/: CostFunction.cpp  Layer.cpp  NeuralNetwork.cpp  Neuron.cpp  Neuron_test.cpp  TrainingSet.cpp
